--- a/3/style.css
+++ b/3/style.css
@@ -1,7 +1,7 @@
 body {
     font-family: poppins;
     background-color: #123;
-    font-family: poppins;
+    font-family: 'Poppins';
 }
 header {
     align-items: center;
